# api/openapiv2/v1-tags/workspace-service/apis.swagger.yaml
@@ -156,6 +156,88 @@ paths:
           format: uint64
       tags:
         - WorkspaceService
+  /api/rest/v1/workspaces/{id}/audit:
+    get:
+      summary: List workspace audit entries
+      description: This endpoint returns audit entries for a specific workspace
+      operationId: WorkspaceService_ListWorkspaceAudit
+      responses:
+        "200":
+          description: A successful response.
+          schema:
+            $ref: '#/definitions/chorusListWorkspaceAuditReply'
+        default:
+          description: An unexpected error response.
+          schema:
+            $ref: '#/definitions/rpcStatus'
+      parameters:
+        - name: id
+          in: path
+          required: true
+          type: string
+          format: uint64
+        - name: pagination.offset
+          description: Optionally offset the number of results
+          in: query
+          required: false
+          type: integer
+          format: int64
+        - name: pagination.limit
+          description: Optionally limit the number of results (between 1 and 500)
+          in: query
+          required: false
+          type: integer
+          format: int64
+        - name: pagination.sort.order
+          in: query
+          required: false
+          type: string
+        - name: pagination.sort.type
+          in: query
+          required: false
+          type: string
+        - name: pagination.query
+          description: Optionally filter the results
+          in: query
+          required: false
+          type: array
+          items:
+            type: string
+          collectionFormat: multi
+          x-example:
+            - user_id=9999
+            - status=STATUS_CREATED,STATUS_CLOSED
+        - name: filter.userId
+          in: query
+          required: false
+          type: string
+          format: uint64
+        - name: filter.workspaceId
+          in: query
+          required: false
+          type: string
+          format: uint64
+        - name: filter.workbenchId
+          in: query
+          required: false
+          type: string
+          format: uint64
+        - name: filter.action
+          in: query
+          required: false
+          type: string
+        - name: filter.fromTime
+          in: query
+          required: false
+          type: string
+          format: date-time
+        - name: filter.toTime
+          in: query
+          required: false
+          type: string
+          format: date-time
+      tags:
+        - WorkspaceService
   /api/rest/v1/workspaces/{id}/user/{userId}:
     delete:
       summary: Remove a user from a workspace
@@ -221,6 +303,56 @@ definitions:
     properties:
       role:
         $ref: '#/definitions/chorusRole'
+  chorusAuditEntry:
+    type: object
+    properties:
+      id:
+        type: string
+        format: uint64
+      userId:
+        type: string
+        format: uint64
+      username:
+        type: string
+      correlationId:
+        type: string
+      action:
+        type: string
+      workspaceId:
+        type: string
+        format: uint64
+      workbenchId:
+        type: string
+        format: uint64
+      description:
+        type: string
+      details:
+        type: object
+        additionalProperties:
+          type: string
+      createdAt:
+        type: string
+        format: date-time
+  chorusAuditFilter:
+    type: object
+    properties:
+      userId:
+        type: string
+        format: uint64
+      workspaceId:
+        type: string
+        format: uint64
+      workbenchId:
+        type: string
+        format: uint64
+      action:
+        type: string
+      fromTime:
+        type: string
+        format: date-time
+      toTime:
+        type: string
+        format: date-time
   chorusCreateWorkspaceReply:
     type: object
     properties:
@@ -248,6 +380,21 @@ definitions:
     properties:
       workspace:
         $ref: '#/definitions/chorusWorkspace'
+  chorusListWorkspaceAuditReply:
+    type: object
+    properties:
+      result:
+        $ref: '#/definitions/chorusListWorkspaceAuditResult'
+      pagination:
+        $ref: '#/definitions/chorusPaginationResult'
+  chorusListWorkspaceAuditResult:
+    type: object
+    properties:
+      entries:
+        type: array
+        items:
+          type: object
+          $ref: '#/definitions/chorusAuditEntry'
   chorusListWorkspacesReply:
     type: object
     properties:
